sim + monitoring